// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichSelectField should render correctly 1`] = `
<DocumentFragment>
  .cache-1fg0y9a-StyledContainer-container-StyledContainer {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-1fg0y9a-StyledContainer-container-StyledContainer.cache-1fg0y9a-StyledContainer-container-StyledContainer {
  margin-top: 0;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-1mxal29-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-1mxal29-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-1mxal29-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-1mxal29-control:focus-within svg {
  fill: #4f0599;
}

.cache-1mxal29-control:hover {
  border-color: #4f0599;
}

.cache-1mxal29-control:hover svg {
  fill: #4f0599;
}

.cache-oxkbbn-Component {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-oxkbbn-Component label {
  display: initial;
}

.cache-1ulf5oa-StyledPlaceholder {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
}

.cache-m44uhw-placeholder {
  color: #b2b6c3;
  grid-area: 1/1/2/3;
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.cache-1eede0w-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1eede0w-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-1b81bwn-Component {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-hhzgpe-StyledIcon-sizeStyles {
  fill: #4a4f62;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-hhzgpe-StyledIcon-sizeStyles.cache-hhzgpe-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 0;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-1a1ow6k-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="e1lzna4r2 cache-1fg0y9a-StyledContainer-container-StyledContainer"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-1mxal29-control"
      >
        <div
          class=" cache-oxkbbn-Component"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-1ulf5oa-StyledPlaceholder e1lzna4r0"
            for="input-6c756c756c756c756c756c756c756c75"
          >
            Select...
          </label>
          <div
            class=" cache-m44uhw-placeholder"
            id="react-select-2-placeholder"
          >
            Select...
          </div>
          <div
            class="cache-1eede0w-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-2-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              aria-owns="react-select-2-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="input-6c756c756c756c756c756c756c756c75"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-1b81bwn-Component"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-hhzgpe-StyledIcon-sizeStyles"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="test"
        type="hidden"
        value=""
      />
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-1a1ow6k-StyledError e1lzna4r1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RichSelectField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1fg0y9a-StyledContainer-container-StyledContainer {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-1fg0y9a-StyledContainer-container-StyledContainer.cache-1fg0y9a-StyledContainer-container-StyledContainer {
  margin-top: 0;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-1mxal29-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-1mxal29-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-1mxal29-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-1mxal29-control:focus-within svg {
  fill: #4f0599;
}

.cache-1mxal29-control:hover {
  border-color: #4f0599;
}

.cache-1mxal29-control:hover svg {
  fill: #4f0599;
}

.cache-oxkbbn-Component {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-oxkbbn-Component label {
  display: initial;
}

.cache-1ulf5oa-StyledPlaceholder {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
}

.cache-m44uhw-placeholder {
  color: #b2b6c3;
  grid-area: 1/1/2/3;
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.cache-1eede0w-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1eede0w-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-1b81bwn-Component {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-hhzgpe-StyledIcon-sizeStyles {
  fill: #4a4f62;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-hhzgpe-StyledIcon-sizeStyles.cache-hhzgpe-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 0;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-1a1ow6k-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="e1lzna4r2 cache-1fg0y9a-StyledContainer-container-StyledContainer"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-1mxal29-control"
      >
        <div
          class=" cache-oxkbbn-Component"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-1ulf5oa-StyledPlaceholder e1lzna4r0"
            for="input-6c756c756c756c756c756c756c756c75"
          >
            Select...
          </label>
          <div
            class=" cache-m44uhw-placeholder"
            id="react-select-3-placeholder"
          >
            Select...
          </div>
          <div
            class="cache-1eede0w-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-3-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              aria-owns="react-select-3-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="input-6c756c756c756c756c756c756c756c75"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-1b81bwn-Component"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-hhzgpe-StyledIcon-sizeStyles"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="test"
        type="hidden"
        value=""
      />
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-1a1ow6k-StyledError e1lzna4r1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RichSelectField should render correctly multiple 1`] = `
<DocumentFragment>
  .cache-1fg0y9a-StyledContainer-container-StyledContainer {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-1fg0y9a-StyledContainer-container-StyledContainer.cache-1fg0y9a-StyledContainer-container-StyledContainer {
  margin-top: 0;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-1mxal29-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-1mxal29-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-1mxal29-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-1mxal29-control:focus-within svg {
  fill: #4f0599;
}

.cache-1mxal29-control:hover {
  border-color: #4f0599;
}

.cache-1mxal29-control:hover svg {
  fill: #4f0599;
}

.cache-oxkbbn-Component {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-oxkbbn-Component label {
  display: initial;
}

.cache-1ulf5oa-StyledPlaceholder {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
}

.cache-m44uhw-placeholder {
  color: #b2b6c3;
  grid-area: 1/1/2/3;
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.cache-gjy3q3-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
}

.cache-gjy3q3-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-1b81bwn-Component {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-hhzgpe-StyledIcon-sizeStyles {
  fill: #4a4f62;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-hhzgpe-StyledIcon-sizeStyles.cache-hhzgpe-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 0;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-1a1ow6k-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="e1lzna4r2 cache-1fg0y9a-StyledContainer-container-StyledContainer"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-1mxal29-control"
      >
        <div
          class=" cache-oxkbbn-Component"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-1ulf5oa-StyledPlaceholder e1lzna4r0"
            for="input-6c756c756c756c756c756c756c756c75"
          >
            Select...
          </label>
          <div
            class=" cache-m44uhw-placeholder"
            id="react-select-4-placeholder"
          >
            Select...
          </div>
          <div
            class="cache-gjy3q3-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-4-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              aria-owns="react-select-4-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="input-6c756c756c756c756c756c756c756c75"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-1b81bwn-Component"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-hhzgpe-StyledIcon-sizeStyles"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div>
        <input
          name="test"
          type="hidden"
        />
      </div>
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-1a1ow6k-StyledError e1lzna4r1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RichSelectField should render correctly with a disabled option 1`] = `
<DocumentFragment>
  .cache-1fg0y9a-StyledContainer-container-StyledContainer {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-1fg0y9a-StyledContainer-container-StyledContainer.cache-1fg0y9a-StyledContainer-container-StyledContainer {
  margin-top: 0;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-1mxal29-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-1mxal29-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-1mxal29-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-1mxal29-control:focus-within svg {
  fill: #4f0599;
}

.cache-1mxal29-control:hover {
  border-color: #4f0599;
}

.cache-1mxal29-control:hover svg {
  fill: #4f0599;
}

.cache-oxkbbn-Component {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-oxkbbn-Component label {
  display: initial;
}

.cache-1ulf5oa-StyledPlaceholder {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
}

.cache-m44uhw-placeholder {
  color: #b2b6c3;
  grid-area: 1/1/2/3;
  margin-left: 2px;
  margin-right: 2px;
  box-sizing: border-box;
}

.cache-1eede0w-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1eede0w-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-1b81bwn-Component {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-hhzgpe-StyledIcon-sizeStyles {
  fill: #4a4f62;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-hhzgpe-StyledIcon-sizeStyles.cache-hhzgpe-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 0;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-1a1ow6k-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="e1lzna4r2 cache-1fg0y9a-StyledContainer-container-StyledContainer"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-1mxal29-control"
      >
        <div
          class=" cache-oxkbbn-Component"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-1ulf5oa-StyledPlaceholder e1lzna4r0"
            for="input-6c756c756c756c756c756c756c756c75"
          >
            Select...
          </label>
          <div
            class=" cache-m44uhw-placeholder"
            id="react-select-5-placeholder"
          >
            Select...
          </div>
          <div
            class="cache-1eede0w-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-describedby="react-select-5-placeholder"
              aria-expanded="false"
              aria-haspopup="true"
              aria-owns="react-select-5-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="input-6c756c756c756c756c756c756c756c75"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-1b81bwn-Component"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-hhzgpe-StyledIcon-sizeStyles"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="test"
        type="hidden"
        value=""
      />
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-1a1ow6k-StyledError e1lzna4r1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RichSelectField should trigger events 1`] = `
<DocumentFragment>
  .cache-1fg0y9a-StyledContainer-container-StyledContainer {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.cache-1fg0y9a-StyledContainer-container-StyledContainer.cache-1fg0y9a-StyledContainer-container-StyledContainer {
  margin-top: 0;
}

.cache-1f43avz-a11yText-A11yText {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.cache-1mxal29-control {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #d4dae7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.cache-1mxal29-control:hover {
  border-color: hsl(0, 0%, 70%);
}

.cache-1mxal29-control:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.cache-1mxal29-control:focus-within svg {
  fill: #4f0599;
}

.cache-1mxal29-control:hover {
  border-color: #4f0599;
}

.cache-1mxal29-control:hover svg {
  fill: #4f0599;
}

.cache-oxkbbn-Component {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
  padding-top: 0;
}

.cache-oxkbbn-Component label {
  display: initial;
}

.cache-12w4gz-StyledPlaceholder {
  position: absolute;
  left: 0;
  font-weight: 400;
  pointer-events: none;
  color: #4a4f62;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
  -webkit-transform: translate(0, -8px) scale(0.8);
  -moz-transform: translate(0, -8px) scale(0.8);
  -ms-transform: translate(0, -8px) scale(0.8);
  transform: translate(0, -8px) scale(0.8);
  transform-origin: left;
  padding-left: 8px;
  left: 0;
  top: 2px;
  opacity: 1;
}

.cache-fs070l-singleValue {
  color: #4a4f62;
  grid-area: 1/1/2/3;
  margin-left: 0;
  margin-right: 0;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  box-sizing: border-box;
  margin-top: 5px;
  padding-left: 0;
}

.cache-1eede0w-inputStyles {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 11px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: inline-grid;
  grid-area: 1/1/2/3;
  grid-template-columns: 0 min-content;
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 0;
  margin-left: 0px;
  caret-color: transparent;
}

.cache-1eede0w-inputStyles:after {
  content: attr(data-value) " ";
  visibility: hidden;
  white-space: pre;
  grid-area: 1/2;
  font: inherit;
  min-width: 2px;
  border: 0;
  margin: 0;
  outline: 0;
  padding: 0;
}

.cache-1b81bwn-Component {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.cache-27txfv-indicatorSeparator {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #d4dae7;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.cache-tlfecz-indicatorContainer {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.cache-tlfecz-indicatorContainer:hover {
  color: hsl(0, 0%, 60%);
}

.cache-hhzgpe-StyledIcon-sizeStyles {
  fill: #4a4f62;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.cache-hhzgpe-StyledIcon-sizeStyles.cache-hhzgpe-StyledIcon-sizeStyles {
  vertical-align: middle;
  margin-right: 0;
}

.cache-3dfrrx-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-3dfrrx-StyledExpandable.cache-3dfrrx-StyledExpandable {
  overflow: hidden;
}

.cache-1a1ow6k-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="e1lzna4r2 cache-1fg0y9a-StyledContainer-container-StyledContainer"
      data-testid="rich-select-test"
    >
      <span
        class="cache-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="cache-1f43avz-a11yText-A11yText"
      />
      <div
        class=" cache-1mxal29-control"
      >
        <div
          class=" cache-oxkbbn-Component"
        >
          <label
            aria-live="assertive"
            as="label"
            class="cache-12w4gz-StyledPlaceholder e1lzna4r0"
            for="input-6c756c756c756c756c756c756c756c75"
          >
            Select...
          </label>
          <div
            class=" cache-fs070l-singleValue"
          >
            Label
          </div>
          <div
            class="cache-1eede0w-inputStyles"
            data-value=""
          >
            <input
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              aria-owns="react-select-8-listbox"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="input-6c756c756c756c756c756c756c756c75"
              role="combobox"
              spellcheck="false"
              style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" cache-1b81bwn-Component"
        >
          <span
            class=" cache-27txfv-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            class=" cache-tlfecz-indicatorContainer"
          >
            <svg
              class="sc-ui-icon etwatq50 cache-hhzgpe-StyledIcon-sizeStyles"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="test"
        type="hidden"
        value="value"
      />
      <div
        class="e14o3tsk0 cache-3dfrrx-StyledExpandable"
      >
        <div
          class="cache-1a1ow6k-StyledError e1lzna4r1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;
